[package]
name = "eldegoss"
version = "0.3.0"
edition = "2021"
description = "eldegoss net"
readme = "README.md"
repository = "https://github.com/prime-rs/eldegoss"
license = "Apache-2.0"
authors = ["JLer <jlerxky@live.com>"]
categories = ["network-programming"]
keywords = ["network", "p2p", "gossip", "pubsub"]

[features]
default = []

[dependencies]
bincode = { version = "1.3", default-features = false }
bytes = { version = "1.6", default-features = false, features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
common_x = { version = "0.4", path = "../common_x", default-features = false, features = [
    "tls",
    "config",
    "graceful",
    "log",
    "signal",
] }
flume = "0.11"
foca = { version = "0.17", features = ["tracing", "bincode-codec"] }
mini-moka = "0.10"
quinn = { version = "0.11", features = ["ring"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uhlc = "0.7"

[profile.dev]
debug = true
opt-level = 0

[profile.fast]
inherits = "release"
opt-level = 3
debug = true
debug-assertions = true
overflow-checks = true
lto = false

[profile.release]
debug = false
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"

[lints.rust]
unsafe_code = "forbid"
# missing_copy_implementations = "warn"
# missing_debug_implementations = "warn"
# unused_crate_dependencies = "warn"
unused_extern_crates = "warn"

[lints.clippy]
missing_const_for_fn = "warn"
