[workspace]
resolver = "2"
members = ["eldegoss", "eldegoss_router"]

[workspace.package]
version = "0.6.0"
edition = "2021"
authors = ["JLer <jlerxky@live.com>"]

[workspace.dependencies]
bincode = { version = "1.3", default-features = false }
bytes = { version = "1.10", default-features = false, features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
color-eyre = { version = "0.6", default-features = false }
common_x = { version = "0.8", default-features = false, features = [
    "tls",
    "config",
    "graceful",
    "log",
    "signal",
] }
flume = "0.11"
foca = { version = "0.18", features = ["tracing", "bincode-codec"] }
mini-moka = "0.10"
quinn = { version = "0.11", features = ["ring"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uhlc = "0.8"
openssl = { version = "0.10", features = ["vendored"] }


[profile.dev]
debug = 0
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
opt-level = "s"
codegen-units = 1

[workspace.lints.rust]
unsafe_code = "forbid"
# unused_crate_dependencies = "warn"
unused_extern_crates = "warn"

[workspace.lints.clippy]
missing_const_for_fn = "warn"
