[package]
name = "eldegoss"
version = "0.4.0"
edition = "2021"
description = "eldegoss net"
readme = "README.md"
repository = "https://github.com/prime-rs/eldegoss"
license = "Apache-2.0"
authors = ["JLer <jlerxky@live.com>"]
categories = ["network-programming"]
keywords = ["p2p", "gossip", "swim", "quic", "foca"]

[features]
default = []

[dependencies]
bincode = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
common_x = { workspace = true }
extism = { workspace = true }
flume = { workspace = true }
foca = { workspace = true }
mini-moka = { workspace = true }
notify = { workspace = true }
parking_lot = { workspace = true }
quinn = { workspace = true }
rand = { workspace = true }
rust-embed = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uhlc = { workspace = true }

[lints]
workspace = true
