[package]
name = "eldegoss"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "eldegoss net"
readme = "../README.md"
repository = "https://github.com/prime-rs/eldegoss"
license = "Apache-2.0"
categories = ["network-programming"]
keywords = ["p2p", "gossip", "swim", "quic", "foca"]

[features]
default = []

[dependencies]
bincode = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
common_x = { workspace = true }
flume = { workspace = true }
foca = { workspace = true }
mini-moka = { workspace = true }
quinn = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uhlc = { workspace = true }

[lints]
workspace = true
